fix venue name spacing on scoreboard

--- a/scoreboard/src/Scoreboard.css
+++ b/scoreboard/src/Scoreboard.css
@@ -84,7 +84,7 @@ h1 {
     font-size: x-small;
     font-weight: bolder;
     margin:0;
-    padding-left: 0.8vw;
+    padding-left: 1vw;
 }
 
 #tableContainer{
